city grid overflow fix

--- a/public/assets/styles/HomePage/_Hero.scss
+++ b/public/assets/styles/HomePage/_Hero.scss
@@ -11,8 +11,6 @@
 
   height: 765px;
   font-family: Assistant;
-  background-repeat: no-repeat;
-  background-size: cover;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -138,7 +136,7 @@
     }
   }
   .cities {
-    width: 740.77px;
+    width: 48.5%;
     height: 146px;
     .text {
       font-size: 16px;
@@ -251,7 +249,12 @@
   @media screen and (max-width: 455px) {
     height: 840px;
     .cities{
-      width: 64%;
+      width: 100%;
+
+      .grid {
+        gap: 5%;
+      }
+
     }
   }
 }
